# auth-fastapi

./: .cursorrules  .gitignore  README.md  merge-py.py  pyproject.toml
alembic/: env.py
docs/: Hexagonal.md  auth-api.md  google-auth-gpt.md  load-map.md  logger.md
scripts/: lint.py
src/: main.py
src/app/adapters/persistence/: session.py
src/app/adapters/persistence/mappers/: user_mapper.py
src/app/adapters/persistence/models/: token_model.py  user.py  user_model.py
src/app/adapters/persistence/repositories/: token_repository.py  user_repository.py
src/app/api/v1/dependencies/: auth.py  user.py
src/app/api/v1/endpoints/: auth.py  auth_google.py  users.py
src/app/api/v1/schemas/: auth.py  common.py  response.py
src/app/core/domain/: value_objects.py
src/app/core/domain/entities/: token.py  user.py
src/app/core/ports/: auth_port.py  logger_port.py  token_port.py  user_port.py
src/app/core/services/: auth_service.py  token_service.py  user_service.py
src/app/infrastructure/cache/: redis_client.py
src/app/infrastructure/logging/: logger.py
src/app/infrastructure/monitoring/: prometheus.py
src/app/infrastructure/repositories/: token_repository.py  user_repository.py
src/common/: exception.py  exception_handler.py
src/settings/: config.py  dispatch.py  environment.py  orm.py
